Зависимости и исключения в Spring Boot - доработка